--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <header class="jumbotron">
+  <header class="jumbotron bg-light">
     <h1 class="display-3">Work Day Scheduler</h1>
     <p id="1a" class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
@@ -77,9 +77,8 @@
         <p class="hour col-1">5PM</p>
         <textarea class="schedule col-10 border" id="17"></textarea>
         <button class="saveBtn">Submit</button>
-
-        <!-- Timeblocks go here -->
       </div>
+      
   </main>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
