add text-block class

--- a/index.html
+++ b/index.html
@@ -25,55 +25,55 @@
 <!-- Schedule Rows -->
 
     <div class="container">
-      <div class="row">
+      <div class="row time-block">
         <p class="hour col-1">9AM</p>
         <textarea class="schedule col-10 border" id="9"></textarea>
         <button class="saveBtn">Submit</button>
       </div>
 
-      <div class="row">
+      <div class="row time-block">
         <p class="hour col-1">10AM</p>
         <textarea class="schedule col-10 border" id="10"></textarea>
         <button class="saveBtn">Submit</button>
       </div>
 
-      <div class="row">
+      <div class="row time-block">
         <p class="hour col-1">11AM</p>
         <textarea class="schedule col-10 border" id="11"></textarea>
         <button class="saveBtn">Submit</button>
       </div>
 
-      <div class="row">
+      <div class="row time-block">
         <p class="hour col-1">12PM</p>
         <textarea class="schedule col-10 border" id="12"></textarea>
         <button class="saveBtn">Submit</button>
       </div>
 
-      <div class="row">
+      <div class="row time-block">
         <p class="hour col-1">1PM</p>
         <textarea class="schedule col-10 border" id="13"></textarea>
         <button class="saveBtn">Submit</button>
       </div>
 
-      <div class="row">
+      <div class="row time-block">
         <p class="hour col-1">2PM</p>
         <textarea class="schedule col-10 border" id="14"></textarea>
         <button class="saveBtn">Submit</button>
       </div>
 
-      <div class="row">
+      <div class="row time-block">
         <p class="hour col-1">3PM</p>
         <textarea class="schedule col-10 border" id="15"></textarea>
         <button class="saveBtn">Submit</button>
       </div>
 
-      <div class="row">
+      <div class="row time-block">
         <p class="hour col-1">4PM</p>
         <textarea class="schedule col-10 border" id="16"></textarea>
         <button class="saveBtn">Submit</button>
       </div>
 
-      <div class="row">
+      <div class="row time-block">
         <p class="hour col-1">5PM</p>
         <textarea class="schedule col-10 border" id="17"></textarea>
         <button class="saveBtn">Submit</button>
